tests/ui/unboxed-closures/unboxed-closures-failed-recursive-fn-2.stderr
error[E0282]: type annotations needed for `Option<_>`
  --> $DIR/unboxed-closures-failed-recursive-fn-2.rs:8:9
   |
LL |     let mut closure0 = None;
   |         ^^^^^^^^^^^^
...
LL |                         return c();
   |                                - type must be known at this point
   |
help: consider giving `closure0` an explicit type, where the placeholders `_` are specified
   |
LL |     let mut closure0: Option<T> = None;
   |                     +++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
